# RPS

./: .clinerules  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.clinerules.d/: 00-preflight.md  10-docs-specs-adr.md  20-agent-runtime.md  30-ui-streamlit.md  40-validation-release.md  50-change-impact.md  60-test-runtime-env.md
.githooks/: pre-commit
config/: agent_knowledge_injection.yaml
doc/: README.md  artefact_flow_overview_and_detail.md  artefact_renderer.md  athlete_backup_restore.md  automatic_planning_flow.md  data_pipeline.md  deployment.md  how_to_plan.md  intervals_posting.md  logging_policy.md  plan_hub_proposal.md  planners.md  planning_principles.md  queue_scheduler_proposal.md  recommended_models.md  schema_versioning.md  streamlit_ui.md  system_architecture.md  ui_spec.md  ui_system_overview.md  validation.md  vectorstores.md  workspace.md
kpi_profiles/: kpi_profile_des_bikepacking_multiday_masters.json  kpi_profile_des_bikepacking_multiday_non_masters.json  kpi_profile_des_brevet_1200_km_masters.json  kpi_profile_des_brevet_1200_km_non_masters.json  kpi_profile_des_brevet_200_400_km_masters.json  kpi_profile_des_brevet_200_400_km_masters.rendered.md  kpi_profile_des_brevet_200_400_km_non_masters.json  kpi_profile_des_brevet_600_km_masters.json  kpi_profile_des_brevet_600_km_non_masters.json  kpi_profile_des_gravel_4-20h_masters.json  kpi_profile_des_gravel_4-20h_non_masters.json
schemas/: activities_actual.schema.json  activities_trend.schema.json  agenda_enum.schema.json  artefact_envelope.schema.json  artefact_meta.schema.json  availability.schema.json  block_execution_arch.schema.json  block_execution_preview.schema.json  block_feed_forward.schema.json  block_governance.schema.json  date_range.schema.json  des_analysis_report.schema.json  iso_week.schema.json  kpi_profile.schema.json  load_band.schema.json  logistics.schema.json  macro_meso_feed_forward.schema.json  macro_overview.schema.json  phase_feed_forward.schema.json  phase_guardrails.schema.json  phase_preview.schema.json  phase_structure.schema.json  planning_events.schema.json  season_phase_feed_forward.schema.json  season_plan.schema.json  season_scenario_selection.schema.json  season_scenarios.schema.json  structured_doc.schema.json  tabular_data.schema.json  week_plan.schema.json  wellness.schema.json  workouts_plan.schema.json  zone_model.schema.json
scripts/: __init__.py  artefact_renderer.py  bundle_schemas.py  check_schema_refs.py  check_schema_required.py  generate_artifact_models.py  list_vectorstores.py  (+10 more)
(+1159 files in other folders)
