[project]
name = "rps"
version = "0.10.4"
description = "Randonneur Performance System (RPS) for endurance planning and feedback."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.40.0",
  "litellm>=1.81.6",
  "qdrant-client>=1.16.2",
  "streamlit>=1.38.0",
  "tiktoken>=0.7.0",
  "pyyaml>=6.0.1",
  "jsonschema>=4.21.1",
  "referencing>=0.34.0",
  "jsonref>=1.1.0",
  "jinja2>=3.1.3",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "altair>=5.0.1",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.20.1",
  "ruff>=0.15.10",
  "types-PyYAML>=6.0.12.20260408",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.14"
show_error_codes = true
pretty = true
warn_unused_ignores = true
disable_error_code = ["import-untyped"]
exclude = [
  "^runtime/",
]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["runtime"]

[tool.ruff.lint]
select = ["F", "I", "B904", "B905", "SIM103", "SIM108", "UP017", "UP031", "UP035", "UP037"]
